--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "ethers": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
