--- a/discordBot/package.json
+++ b/discordBot/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.8.0",
-    "ethers": "^6.1.0"
+    "dotenv": "^16.0.3",
+    "ethers": "^5.4.0",
+    "node-fetch": "^3.3.1"
   }
 }
