--- a/discordBot/package.json
+++ b/discordBot/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^9.1.1",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.4.0",
